--- a/concept.html
+++ b/concept.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CONCEPT｜KISSA official website</title>
-  <meta name="description" content="私達について">
+  <title>CONCEPT｜KIT_STUDYSP</title>
+  <meta name="description" content="金沢工業大学の学習スペースを特集する予定のサイトです">
   <meta name="viewport" content="width=device-width">
   <script src="./js/toggle-menu.js"></script>
   <link href="./css/common.css" rel="stylesheet">
-  <link href="./css/concept.css" rel="stylesheet">
+  <link href="./css/space.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
