--- a/space.html
+++ b/space.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>MENU｜KISSA official website</title>
-  <meta name="description" content="カフェ「KISSA」のメニューを掲載しています。こだわりの浅煎りコーヒーをはじめ、さまざまなメニューをご用意しています。">
+  <title>SPACE｜KIT_STUDYSP</title>
+  <meta name="description" content="金沢工業大学の学習スペースを特集する予定のサイトです">
   <meta name="viewport" content="width=device-width">
   <script src="./js/toggle-menu.js"></script>
   <link href="./css/common.css" rel="stylesheet">
