--- a/access.html
+++ b/access.html
@@ -7,8 +7,8 @@
   <meta name="description" content="金沢工業大学の学習スペースを特集する予定のサイトです">
   <meta name="viewport" content="width=device-width">
   <script src="./js/toggle-menu.js"></script>
+  <link href="./css/access.css" rel="stylesheet">
   <link href="./css/common.css" rel="stylesheet">
-  <link href="./css/space.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
