--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <main class="main">
     <div class="first-view">
       <div class="first-view-text">
-        <h1>工大の学習スペースを <br>まとめてみた</h1>
+        <h1>工大の学習スペース<br>まとめてみた</h1>
         <p>ver1.0</p>
       </div>
     </div>
