文面等をスマホ用に修正

--- a/concept.html
+++ b/concept.html
@@ -52,7 +52,7 @@
     <div class="feature reverse">
       <div class="feature-text">
         <h2>金沢工業大学での学習に付加価値を</h2>
-        <p>Web形式のレスポンシブ対応にすることで、いつでも手軽に学習スペースを調べることができるようになっています。</p>
+        <p>スマホ用のレスポンシブ対応にすることで、いつでも手軽に学習スペースを調べることができるようになっています。</p>
       </div>
       <img src="./images/concept/7J9A8357.jpg" alt="free">
     </div>
