--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="lead">
-      <p>金沢工業大学の学生はいつも真面目である。<br>いつも学習スペースを求め学内を歩き回っている。<br>そんな時間を、減らせると嬉しい。</p>
+      <p>金沢工業大学の学生はいつも真面目である。<br>いつも学習スペースを求め学内を歩き回る。<br>そんな時間を、減らせると嬉しい。</p>
       <div class="link-button-area">
         <a class="link-button" href="./concept.html">CONCEPT</a>
       </div>
