--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </li>
       </ul>
       <div class="link-button-area">
-        <a class="link-button" href="./space.html">MENU</a>
+        <a class="link-button" href="./space.html">SPACE</a>
       </div>
     </div>
   </main>
