色々追加しました

--- a/space.html
+++ b/space.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width">
   <script src="./js/toggle-menu.js"></script>
   <link href="./css/common.css" rel="stylesheet">
-  <link href="./css/space.css" rel="stylesheet">
+  <link href="./css/space2.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
@@ -37,10 +37,23 @@
   <!-- headerここまで -->
 
   <!-- mainここから -->
-  <main class="main">
-    <div class="title2">
-      <h2>Comming Soon</h2>
+<main class="main">
+    <div class="title">
+      <h1>SPACE</h1>
+      <p>勉強できる場所</p>
     </div>
+    <ul class="item-list">
+      <li>
+        <img src="./images/space/IMG_10775621104.JPG" alt="自習室">
+        <dl>
+          <dt>自習室</dt>
+          <dd>工大生ゆかりの聖地</dd>
+        </dl>
+        <p class="price">¥0</p>
+        <p class="item-label">study room</p>
+      </li>
+    </ul>
+  </main>
   <!-- mainここまで -->
 
   <!-- footerここから -->
